<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ShoppingListDatabaseActivity!</string>
    <string name="app_name">ShoppingListDatabase</string>
    <string name="no_items">Currently there are no items maintained</string>
    <string name="btn_quantityunits_caption">Mengeneinheiten</string>
    <string name="btn_categories_caption">Kategorien</string>
    <string name="btn_articles_caption">Artikel</string>
    <string name="btn_finish_caption">Zurück</string>
    <string name="btn_additem_caption">Hinzufügen</string>
    <string name="btn_edititem_caption">Ändern</string>
    <string name="btn_deleteitem_caption">Löschen</string>
    <string name="txt_ok">OK</string>
    <string name="txt_cancel">Abbrechen</string>
    <string name="txt_name">Name</string>
    <string name="txt_category">Kategorie</string>
    <string name="txt_quantityunit">Einheit</string>
    
</resources>