<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_above="@+id/btn_finish"
        android:layout_height="fill_parent"
        android:drawSelectorOnTop="true" />
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id = "@id/android:empty"
		android:text="@string/no_items"
		android:gravity="center_vertical|center_horizontal"
		android:layout_above="@+id/btn_finish" />
	<Button  
		android:id="@+id/btn_additem"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:text="@string/btn_additem_caption" />
	<Button  
		android:id="@+id/btn_edititem"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:text="@string/btn_edititem_caption" 
		android:layout_toRightOf="@+id/btn_additem" />
	<Button  
		android:id="@+id/btn_deleteitem"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:text="@string/btn_deleteitem_caption" 
		android:layout_toRightOf="@+id/btn_edititem" />
	<Button  
		android:id="@+id/btn_finish"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:text="@string/btn_finish_caption"
		android:layout_toRightOf="@+id/btn_deleteitem" />
	
</RelativeLayout>