<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button
        android:id="@+id/btn_quantityunits"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_quantityunits_caption" />

    <Button
        android:id="@+id/btn_categories"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_categories_caption" />

    <Button
        android:id="@+id/btn_articles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_articles_caption" />
  		
</LinearLayout>
