<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="10dp" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_addarticle_dlg_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_name" />

            <EditText
                android:id="@+id/edt_addarticle_dlg_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_addarticle_dlg_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_category" />

            <EditText
                android:id="@+id/edt_addarticle_dlg_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_addarticle_dlg_quantityunit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_quantityunit" />

            <EditText
                android:id="@+id/edt_addarticle_dlg_quantityunit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <Button
            android:id="@+id/btn_addarticle_dlg_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ok" />

        <Button
            android:id="@+id/btn_addarticle_dlg_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_cancel" />

    </TableLayout>

</LinearLayout>
